# RW_ML

./: Makefile  README.md  redpanda.yml  requirements.txt
services/trade_producer/: Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  main.py
