[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Lucas Fields <lqf2b8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
quixstreams = "^3.23.1"
loguru = "^0.7.3"
websocket-client = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
